@@ -198,6 +198,7 @@ final class WC_Stripe_Blocks_Support extends AbstractPaymentMethodType {
 				'button'                          => [
 					'customLabel' => $this->payment_request_configuration->get_button_label(),
 				],
+				'style'                          => $this->get_style(),
 			]
 		);
 	}
@@ -248,6 +249,19 @@ final class WC_Stripe_Blocks_Support extends AbstractPaymentMethodType {
 		}
 
 		return $this->payment_request_configuration->should_show_payment_request_button();
+	}
+
+	/**
+	 * Returns an array of style properties supported by the payment method.
+	 * This method is used only when rendering the payment method in the editor.
+	 *
+	 * @return array Array of style properties.
+	 */
+	private function get_style() {
+		return [
+			'height',
+			'borderRadius',
+		];
 	}
 
 	/**
